--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                 <li>
                   <a href="./index.html#portfolio" class="link">Portfolio</a>
                 </li>
-                <li><a href="./index.html#contact" class="link">Contact</a></li>
+                <li><a href="./contact.html" class="link">Contact</a></li>
               </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
@@ -70,7 +70,9 @@
                       >
                     </li>
                     <li>
-                      <a href="#contact" class="mobile__menu-link">Contact</a>
+                      <a href="./contact.html" class="mobile__menu-link"
+                        >Contact</a
+                      >
                     </li>
                   </ul>
                 </nav>
