--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li>
                   <a href="./portfolio.html" class="link">Portfolio</a>
                 </li>
-                <li><a href="index.html#contact" class="link">Contact</a></li>
+                <li><a href="./contact.html" class="link">Contact</a></li>
               </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
@@ -76,7 +76,9 @@
                       >
                     </li>
                     <li>
-                      <a href="#contact" class="mobile__menu-link">Contact</a>
+                      <a href="./contact.html" class="mobile__menu-link"
+                        >Contact</a
+                      >
                     </li>
                   </ul>
                 </nav>
