Added links to footer

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,11 @@
                 <li>
                   <a href="./portfolio.html" class="link">Portfolio</a>
                 </li>
-                <li><a href="index.html#contact" class="link">Contact</a></li>
+                <li>
+                  <a href="index.html#contact" class="link carrent-link"
+                    >Contact</a
+                  >
+                </li>
               </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
@@ -141,7 +145,12 @@
         ></a>
       </div>
       <p class="text-center text-body-light p-3">
-        Designed and coded by Yevheniia Kovzikova and open-sourced on GitHub
+        Designed and coded by
+        <a href="mailto:altinok.reg@gmail.com">Yevheniia Kovzikova</a> and
+        open-sourced on
+        <a href="https://github.com/Mahaonn/hi--it-s-me" target="_blank"
+          >GitHub</a
+        >
       </p>
     </footer>
     <script
