--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,12 @@
         ></a>
       </div>
       <p class="text-center text-body-light p-3">
-        Designed and coded by Yevheniia Kovzikova and open-sourced on GitHub
+        Designed and coded by
+        <a href="mailto:altinok.reg@gmail.com">Yevheniia Kovzikova</a> and
+        open-sourced on
+        <a href="https://github.com/Mahaonn/hi--it-s-me" target="_blank"
+          >GitHub</a
+        >
       </p>
     </footer>
     <script
